# tashikani

./: .gitignore  README.md  SECURITY.md  pyproject.toml
bot-rust/: Cargo.toml  README.md
bot-rust/src/: commands.rs  main.rs
bot-rust/src/commands/: configuration.rs  donate.rs  info.rs  invite.rs  silence.rs  start.rs  stats.rs  time.rs
tashikani/: __init__.py  __main__.py
